0.11.14
 - setup: bump dclab from 0.47.0 to 0.47.1
0.11.13
 - maintenance release
0.11.12
 - enh: retry on connection errors when using CLI for uploads (#66)
0.11.11
 - fix: refactor "Job list not initialized!" exception in GUI into a
   logger warning (#65)
0.11.10
 - setup: bump dclab from 0.46.4 to 0.47.0 (new feature)
0.11.9
 - setup: bump dclab from 0.46.0 to 0.46.4 (new features)
0.11.8
 - fix: check the circle name before uploading (#64)
 - fix: force initialization of jobs in upload widget (#63)
 - setup: bump dclab from 0.45.0 to 0.46.0
0.11.7
 - setup: bump dclab from 0.43.1 to 0.45.0 (scalar feature support)
0.11.6
 - fix: set visibility to private based on available licenses
 - fix: calling the CLI 'dcoraid-upload-task --help' raised exception
 - fix: add timeout to api.post
 - fix: remove time DCOR-Aid waits for the server from average upload rate
 - enh: unselected license in upload dialog for example data
 - enh: increase logging verbosity
0.11.5
 - enh: increase logging verbosity
 - setup: bump dclab from 0.43.0 to 0.43.1
0.11.4
 - build: use InnoSetup "autopf" feature for installation directory
 - enh: add return values to command-line uploader
0.11.3
 - setup: bump dclab from 0.42.0 to 0.43.0 (improved compression)
 - setup: include zstandard library in distribution installer
0.11.2
 - fix: make sure self-signed SSL certificates of DCOR-med instances
   are used everywhere (#61)
 - fix: raise error when an .rtdc file contains undefined features (#55)
 - ref: move dcor access token code to dclab
 - setup: bump dclab from 0.40.0 to 0.42.0
0.11.1
 - fix: CLI did not verify individual upload steps (#59)
 - enh: add additional step "wait-dcor" during verification task (#54)
 - ref: get rid of distutils dependency
0.11.0
 - feat: support downloading condensed .rtdc files
 - enh: allow user to choose download location via preferences (#43)
 - ref: download jobs no longer are identified via `resource_id`, but