@@ -1,4 +1,5 @@
 0.11.14
+ - fix: logs cluttered with warning messages when no API key is set
  - setup: bump dclab from 0.47.0 to 0.47.1
 0.11.13
  - maintenance release
